MDL-47672 Enrolments, Themes: fix misalignment on enrolled users page

--- a/theme/bootstrapbase/less/moodle/core.less
+++ b/theme/bootstrapbase/less/moodle/core.less
@@ -1025,6 +1025,7 @@ body.tag .managelink {
     height: 41px;
 }
 .userenrolment .subfield {
+    display: inline-block;
     margin-right: 5px;
 }
 .userenrolment .col_userdetails .subfield_picture {
